--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -86,8 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Import the modules\n",
@@ -96,10 +98,7 @@
     "from pathlib import Path\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "from imblearn.metrics import classification_report_imbalanced"
    ]
   },
   {
@@ -125,13 +124,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "      <th>loan_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.672</td>\n",
+       "      <td>52800</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8400.0</td>\n",
+       "      <td>6.692</td>\n",
+       "      <td>43600</td>\n",
+       "      <td>0.311927</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>6.963</td>\n",
+       "      <td>46100</td>\n",
+       "      <td>0.349241</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.664</td>\n",
+       "      <td>52700</td>\n",
+       "      <td>0.430740</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10800.0</td>\n",
+       "      <td>7.698</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>0.433962</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+       "0    10700.0          7.672            52800        0.431818                5   \n",
+       "1     8400.0          6.692            43600        0.311927                3   \n",
+       "2     9000.0          6.963            46100        0.349241                3   \n",
+       "3    10700.0          7.664            52700        0.430740                5   \n",
+       "4    10800.0          7.698            53000        0.433962                5   \n",
+       "\n",
+       "   derogatory_marks  total_debt  loan_status  \n",
+       "0                 1       22800            0  \n",
+       "1                 0       13600            0  \n",
+       "2                 0       16100            0  \n",
+       "3                 1       22700            0  \n",
+       "4                 1       23000            0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
     "df=pd.read_csv(\n",
-    "    Path(\"Resources/lending_data.csv\")\n",
+    "    Path(\"./Resources/lending_data.csv\")\n",
     ")\n",
     "\n",
     "# Review the DataFrame\n",
@@ -147,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,22 +279,27 @@
     {
      "data": {
       "text/plain": [
-       "0    0\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "Name: loan_status, dtype: int64"
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "77531    1\n",
+       "77532    1\n",
+       "77533    1\n",
+       "77534    1\n",
+       "77535    1\n",
+       "Name: loan_status, Length: 77536, dtype: int64"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "display(y)"
    ]
   },
   {
@@ -299,7 +415,7 @@
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "X.head()"
    ]
   },
   {
@@ -311,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,14 +438,13 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "display(y.value_counts())"
    ]
   },
   {
@@ -341,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +465,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -376,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(random_state=1)"
+       "LogisticRegression()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,10 +511,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model = LogisticRegression()\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -411,12 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "test_predict = model.predict(X_test)"
    ]
   },
   {
@@ -434,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -443,41 +558,42 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]])"
-      ]
-     },
      "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "# Print the balanced_accuracy score of the model\n",
+    "bas = balanced_accuracy_score(y_test, test_predict)\n",
+    "bas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18663,   102],\n",
+       "       [   56,   563]], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate a confusion matrix for the model\n",
+    "confusion_matrix(y_test, test_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +612,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, test_predict))"
    ]
   },
   {
@@ -512,7 +628,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** For healthy loans, the model predicts 1.00, or 100% accuracy. The other prediction for high-risk loans is 85%. This implies that the model will sometimes inaccurately classify high-risk loans."
    ]
   },
   {
@@ -538,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,33 +663,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = random_oversampler.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -585,19 +701,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "lr = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "lr_resampled = lr.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred_resampled = lr_resampled.predict(X_test)"
    ]
   },
   {
@@ -631,7 +747,7 @@
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_pred_resampled)"
    ]
   },
   {
@@ -643,7 +759,7 @@
      "data": {
       "text/plain": [
        "array([[18649,   116],\n",
-       "       [    4,   615]])"
+       "       [    4,   615]], dtype=int64)"
       ]
      },
      "execution_count": 17,
@@ -653,7 +769,7 @@
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test,y_pred_resampled)"
    ]
   },
   {
@@ -677,7 +793,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred_resampled))"
    ]
   },
   {
@@ -693,15 +809,15 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev",
    "language": "python",
-   "name": "python3"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -713,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
